--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+############################################################
+# Generated ignores
+############################################################
 
 ### Emacs ###
 # -*- mode: gitignore; -*-
@@ -379,7 +382,7 @@ $RECYCLE.BIN/
 
 # if you are NOT using Zero-installs, then:
 # comment the following lines
-!.yarn/cache
+# !.yarn/cache
 
 # and uncomment the following lines
-# .pnp.*
+.pnp.*
