Create IDEA project & get it working

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 ############################################################
+# Custom ignores
+############################################################
+
+/tmp
+
+############################################################
 # Generated ignores
 ############################################################
 
