--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "date-fns": "^2.30.0",
     "date-fns-tz": "^1.3.8",
-    "markdown-it": "^14.0.0",
+    "markdown-it": "^13.0.1",
     "pinia": "^2.1.7",
     "sass": "^1.69.5",
     "vue": "^3.3.11",
     "vue3-markdown-it": "^1.0.10"
   },
   "devDependencies": {
+    "@types/markdown-it": "^13.0.1",
     "@vitejs/plugin-vue": "^4.5.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
